--- a/styles.css
+++ b/styles.css
@@ -57,3 +57,10 @@ body {
   padding: 10px 25px;
   margin: 10px;
 }
+
+.recipe-img {
+  border-radius: 10px;
+  margin: 10px auto;
+  padding: 20px;
+  background-color: rgb(0, 48, 73);
+}
