--- a/styles.css
+++ b/styles.css
@@ -64,3 +64,21 @@ body {
   padding: 20px;
   background-color: rgb(0, 48, 73);
 }
+
+.recipe-card {
+  background-color: rgb(120, 0, 0);
+  width: 50%;
+  padding: 20px;
+  border-radius: 10px;
+}
+
+.recipe-descr,
+.recipe-ingr,
+.recipe-steps,
+.recipe-extra {
+  border-radius: 10px;
+  background-color: rgb(193, 18, 31);
+  color: rgb(253, 240, 213);
+  padding: 10px;
+  margin: 10px;
+}
